# jrpc_auth

./: .env  .gitignore  CMakeLists.txt  README.MD  README_RU.MD  WIP.MD  WIP_VARIANTS.MD  create_rsa_keypair.sh  mysql_testdata.bash
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt
examples/common/inc/auth_configuration/: json_configuration.h
examples/common/inc/user_storage/: qsql_user_storage.h
examples/jrpc_auth/: CMakeLists.txt  README.MD  README_RU.MD  config.json  main.cpp
examples/jrpc_auth/inc/: auth_service.h
examples/jrpc_auth/src/: auth_service.cpp
examples/jrpc_auth/src/auth_configuration/: json_configuration.cpp  json_configuration.h
examples/jrpc_auth/src/auth_storage/: iauth_config.h  iauth_storage.h  mem_auth_storage.cpp
examples/jrpc_auth/src/service/: auth_service.cpp  auth_service.h  iservice_config.h
examples/jrpc_auth/src/user_storage/: iuser_config.h  iuser_storage.h  qsql_user_storage.cpp  qsql_user_storage.h
examples/jrpc_double_token_auth/: CMakeLists.txt  README.MD  README_RU.MD  config.json
examples/jrpc_double_token_auth/inc/: auth_service.h
examples/jrpc_double_token_auth/src/: auth_service.cpp
examples/server_arch/: CMakeLists.txt  main.cpp
examples/server_arch/src/: AuthService.cpp  AuthService.h  common.h
examples/server_arch/src/AuthStorage/: MemoryAuthStorage.cpp  MemoryAuthStorage.h
examples/server_arch/src/UserStorage/: CustomUserStorage.cpp  CustomUserStorage.h
examples/server_arch_jwt/: CMakeLists.txt  main.cpp
examples/server_arch_jwt/src/: auth_service.cpp  auth_service.h
examples/server_arch_jwt/src/auth_storage/: iauth_storage.h  mem_auth_storage.cpp  mem_auth_storage.h
examples/server_arch_jwt/src/user_storage/: iuser_storage.h  mem_user_storage.cpp  mem_user_storage.h  psql_user_storage.cpp  psql_user_storage.h  qsql_user_storage.h
key/: jwtRS512.pem  jwtRS512.pem.pub
